--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- TO PROVIDE THE SUPPORT OF HYSTRIX-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
